Updated bib for RJ-2025-021

--- a/_articles/RJ-2025-021/lsirm12pl.bib
+++ b/_articles/RJ-2025-021/lsirm12pl.bib
@@ -1,5 +1,5 @@
 @article{Goldberg1992,
-  title = {The development of markers for the {B}ig-{F}ive factor structure.},
+  title = {The development of markers for the Big-Five factor structure.},
   volume = {4},
   ISSN = {1040-3590},
   url = {http://dx.doi.org/10.1037/1040-3590.4.1.26},
@@ -20,7 +20,7 @@
  number = {5},
  pages = {388–411},
  publisher = {SAGE Publications},
- title = {Effects of {I}gnoring {I}tem {I}nteraction on {I}tem {P}arameter {E}stimation and {D}etection of {I}nteracting {I}tems},
+ title = {Effects of Ignoring Item Interaction on Item Parameter Estimation and Detection of Interacting Items},
  url = {http://dx.doi.org/10.1177/0146621606297309},
  volume = {31},
  year = {2007}
@@ -36,14 +36,14 @@
  number = {1},
  pages = {7},
  publisher = {MDPI AG},
- title = {Modeling {S}equential {D}ependencies in {P}rogressive {M}atrices: {A}n {A}uto-{R}egressive {I}tem {R}esponse {T}heory ({AR-IRT}) {A}pproach},
+ title = {Modeling Sequential Dependencies in Progressive Matrices: An Auto-Regressive Item Response Theory ({AR-IRT}) Approach},
  url = {http://dx.doi.org/10.3390/jintelligence12010007},
  volume = {12},
  year = {2024}
 }
 
 @article{Braeken2010,
-  title = {A {B}oundary {M}ixture {A}pproach to {V}iolations of {C}onditional {I}ndependence},
+  title = {A Boundary Mixture Approach to Violations of Conditional Independence},
   volume = {76},
   ISSN = {1860-0980},
   url = {http://dx.doi.org/10.1007/s11336-010-9190-4},
@@ -57,7 +57,7 @@
 }
 
 @article{Rousseeuw1987,
-  title = {Silhouettes: {A} graphical aid to the interpretation and validation of cluster analysis},
+  title = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
   volume = {20},
   ISSN = {0377-0427},
   url = {http://dx.doi.org/10.1016/0377-0427(87)90125-7},
@@ -70,7 +70,7 @@
 }
 
 @misc{yi2023,
-     title={Impacts of {I}nnovation {S}chool {S}ystem in {K}orea: {A} {L}atent {S}pace {I}tem {R}esponse {M}odel with {N}eyman-{S}cott {P}oint {P}rocess},
+     title={Impacts of Innovation School System in {Korea}: A Latent Space Item Response Model with {Neyman-Scott} Point Process},
       author={Seorim Yi and Minkyu Kim and Jaewoo Park and Minjeong Jeon and Ick Hoon Jin},
       year={2024},
       eprint={2306.02106},
@@ -87,7 +87,7 @@
   volume = {158},
   pages = {107190},
   author = {Fatima Batool and Christian Hennig},
-  title = {Clustering with the {A}verage {S}ilhouette {W}idth},
+  title = {Clustering with the Average Silhouette Width},
   journal = {Computational Statistics \& Data Analysis}
 }
 
@@ -105,7 +105,7 @@
   
 @inproceedings{Ng2001,
 author = {Ng, Andrew Y. and Jordan, Michael I. and Weiss, Yair},
-title = {On {S}pectral {C}lustering: {A}nalysis and an {A}lgorithm},
+title = {On Spectral Clustering: Analysis and an Algorithm},
 year = {2001},
 publisher = {MIT Press},
 address = {Cambridge, MA, USA},
@@ -138,7 +138,7 @@ series = {NIPS'01}
   volume = {116},
   pages = {144 --163},
   author = {J. Neyman and E. L. Scott},
-  title = {A {T}heory of the {S}patial {D}istribution of {G}alaxies.},
+  title = {A Theory of the Spatial Distribution of Galaxies},
   journal = {The Astrophysical Journal}
 }
 
@@ -151,7 +151,7 @@ series = {NIPS'01}
   number = {1/2},
   pages = {18--25},
   author = {Marjorie Thomas},
-  title = {A {G}eneralization of {P}oisson{\textquotesingle}s {B}inomial {L}imit {F}or use in {E}cology},
+  title = {A Generalization of {Poisson}'s Binomial Limit For use in Ecology},
   journal = {Biometrika}
 }
 
@@ -164,7 +164,7 @@ series = {NIPS'01}
   number = {1},
   pages = {31--44},
   author = {Erling B. Andersen},
-  title = {{CONDITIONAL} {INFERENCE} {FOR} {MULTIPLE}-{CHOICE} {QUESTIONNAIRES}},
+  title = {Conditional inference for multiple-choice questionnaires},
   journal = {British Journal of Mathematical and Statistical Psychology}
 }
 
@@ -183,7 +183,7 @@ series = {NIPS'01}
 
 
 @BOOK{Linacre1994,
-  title     = "Many-facet Rasch measurement",
+  title     = "Many-facet {Rasch} measurement",
   author    = "Linacre, John M",
   publisher = "University of Chicago Social Research",
   year      =  1994,
@@ -212,7 +212,7 @@ series = {NIPS'01}
   number = {2},
   pages = {165--181},
   author = {Hans M{\"u}ller},
-  title = {A {R}asch model for continuous ratings},
+  title = {A {Rasch} model for continuous ratings},
   journal = {Psychometrika}
 }
 
@@ -227,7 +227,7 @@ series = {NIPS'01}
   number = {3},
   pages = {307--335},
   author = {Li Cai},
-  title = {Metropolis-{H}astings {R}obbins-{M}onro {A}lgorithm for {C}onfirmatory {I}tem {F}actor {A}nalysis},
+  title = {{Metropolis-Hastings Robbins-Monro} Algorithm for Confirmatory Item Factor Analysis},
   journal = {Journal of Educational and Behavioral Statistics}
 }
 
@@ -240,7 +240,7 @@ series = {NIPS'01}
   number = {1},
   pages = {33--57},
   author = {Li Cai},
-  title = {High-dimensional {E}xploratory {I}tem {F}actor {A}nalysis by-{A}-{M}etropolis{\textendash}{H}astings {R}obbins{\textendash}{M}onro {A}lgorithm},
+  title = {High-dimensional Exploratory Item Factor Analysis by a {Metropolis--Hastings Robbins--Monro} Algorithm},
   journal = {Psychometrika}
 }
 
@@ -253,7 +253,7 @@ series = {NIPS'01}
   number = {1},
   pages = {4--19},
   author = {Robert D. Gibbons and R. Darrell Bock and Donald Hedeker and David J. Weiss and Eisuke Segawa and Dulal K. Bhaumik and David J. Kupfer and Ellen Frank and Victoria J. Grochocinski and Angela Stover},
-  title = {Full-{I}nformation {I}tem {B}ifactor {A}nalysis of {G}raded {R}esponse {D}ata},
+  title = {Full-Information Item Bifactor Analysis of Graded Response Data},
   journal = {Applied Psychological Measurement}
 }
 
@@ -280,7 +280,7 @@ series = {NIPS'01}
   number = {1},
   pages = {73--90},
   author = {Eiji Muraki and James E. Carlson},
-  title = {Full-{I}nformation {F}actor {A}nalysis for {P}olytomous {I}tem {R}esponses},
+  title = {Full-Information Factor Analysis for Polytomous Item Responses},
   journal = {Applied Psychological Measurement}
 }
 
@@ -293,7 +293,7 @@ series = {NIPS'01}
   number = {3},
   pages = {261--280},
   author = {R. Darrell Bock and Robert Gibbons and Eiji Muraki},
-  title = {Full-{I}nformation {I}tem {F}actor {A}nalysis},
+  title = {Full-Information Item Factor Analysis},
   journal = {Applied Psychological Measurement}
 }
 
@@ -335,7 +335,7 @@ series = {NIPS'01}
 
 
 @article{scheiblechner1972,
-  title={Das {L}ernen und {L}{\"o}sen komplexer {D}enkaufgaben},
+  title={{Das Lernen} und {L{\"o}sen} komplexer {Denkaufgaben}},
   author={Scheiblechner, Hartmann},
   journal={Zeitschrift f{\"u}r experimentelle und angewandte Psychologie},
   volume={19},
@@ -351,7 +351,7 @@ series = {NIPS'01}
   number = {2},
   pages = {149--174},
   author = {Geoff N. Masters},
-  title = {A {R}asch model for partial credit scoring},
+  title = {A {Rasch} model for partial credit scoring},
   journal = {Psychometrika}
 }
 
@@ -371,7 +371,7 @@ series = {NIPS'01}
 
 @article{Samejima1968,
 author = {Samejima, Fumi},
-title = {{ESTIMATION} {OF} {LATENT} {ABILITY} {USING} {A} {RESPONSE} {PATTERN} {OF} {GRADED} {SCORES1}},
+title = {Estimation of latent ability using a response pattern of graded scores},
 journal = {ETS Research Bulletin Series},
 volume = {1968},
 number = {1},
@@ -383,7 +383,7 @@ year = {1968}
 
 
 @article{Chalmers2012,
- title={mirt: {A} {M}ultidimensional {I}tem {R}esponse {T}heory Package for the {R} {E}nvironment},
+ title={mirt: A Multidimensional Item Response Theory Package for the {R} Environment},
  volume={48},
  doi={10.18637/jss.v048.i06},
  number={6},
@@ -394,7 +394,7 @@ year = {1968}
 }
 
 @article{Hohensinn2018,
- title={pc{IRT}: {A}n {R} {P}ackage for {P}olytomous and {C}ontinuous {R}asch {M}odels},
+ title={pc{IRT}: An {R} Package for Polytomous and Continuous {Rasch} Models},
  volume={84},
  doi={10.18637/jss.v084.c02},
  number={2},
@@ -406,7 +406,7 @@ year = {1968}
 
 
 @Manual{Robitzsch2022,
-    title = {{TAM}: {T}est {A}nalysis {M}odules},
+    title = {{TAM}: Test Analysis Modules},
     author = {Alexander Robitzsch and Thomas Kiefer and Margaret Wu},
     year = {2022},
     note = {R package version 4.1-4},
@@ -415,7 +415,7 @@ year = {1968}
 
 
 @article{Rizopoulos2006,
- title={ltm: An {R} Package for {L}atent {V}ariable {M}odeling and {I}tem {R}esponse {A}nalysis},
+ title={ltm: An {R} Package for Latent Variable Modeling and Item Response Analysis},
  volume={17},
  doi={10.18637/jss.v017.i05},
  abstract={The R package ltm has been developed for the analysis of multivariate dichotomous and polytomous data using latent variable models, under the Item Response Theory approach. For dichotomous data the Rasch, the Two-Parameter Logistic, and Birnbaum’s Three-Parameter models have been implemented, whereas for polytomous data Semejima’s Graded Response model is available. Parameter estimates are obtained under marginal maximum likelihood using the Gauss-Hermite quadrature rule. The capabilities and features of the package are illustrated using two real data examples.},
@@ -428,7 +428,7 @@ year = {1968}
 
 
 @article{Wheadon2014,
- title={Classification {A}ccuracy and {C}onsistency under {I}tem {R}esponse {T}heory {M}odels {U}sing the {P}ackage classify},
+ title={Classification Accuracy and Consistency under Item Response Theory Models Using the Package classify},
  volume={56},
  url={https://www.jstatsoft.org/index.php/jss/article/view/v056i10},
  doi={10.18637/jss.v056.i10},
@@ -441,7 +441,7 @@ year = {1968}
 
 
 @article{Burkner2021,
- title={{B}ayesian {I}tem {R}esponse {M}odeling in {R} with brms and {S}tan},
+ title={Bayesian Item Response Modeling in {R} with brms and Stan},
  volume={100},
  doi={10.18637/jss.v100.i05},
  journal={Journal of Statistical Software},
@@ -451,7 +451,7 @@ year = {1968}
 }
 
 @article{Mair2007,
- title={{E}xtended {R}asch {M}odeling: The e{R}m {P}ackage for the {A}pplication of {IRT} {M}odels in {R}},
+ title={Extended {Rasch} Modeling: The {eRm} Package for the Application of {IRT} Models in {R}},
  volume={20},
  doi={10.18637/jss.v020.i09},
  number={9},
@@ -462,7 +462,7 @@ year = {1968}
 }
 
 @Article{Dirk2014,
-    title = {RcppArmadillo: {A}ccelerating {R} with high-performance {C}++ linear algebra},
+    title = {RcppArmadillo: Accelerating {R} with high-performance {C++} linear algebra},
     author = {Dirk Eddelbuettel and Conrad Sanderson},
     journal = {Computational Statistics and Data Analysis},
     year = {2014},
@@ -473,7 +473,7 @@ year = {1968}
   }
 
 @Article{Dirk2011,
-    title = {{Rcpp}: {S}eamless {R} and {C++} {I}ntegration},
+    title = {{Rcpp}: Seamless {R} and {C++} Integration},
     author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
     journal = {Journal of Statistical Software},
     year = {2011},
@@ -484,7 +484,7 @@ year = {1968}
   }
 
 @Book{Dirk2013,
-    title = {Seamless {R} and {C++} {I}ntegration with {Rcpp}},
+    title = {Seamless {R} and {C++} Integration with {Rcpp}},
     author = {Dirk Eddelbuettel},
     publisher = {Springer},
     address = {New York},
@@ -493,7 +493,7 @@ year = {1968}
   }
 
 @Article{Dirk2018,
-    title = {Extending {R} with {C++}: {A} {B}rief {I}ntroduction
+    title = {Extending {R} with {C++}: A Brief Introduction
       to {Rcpp}},
     author = {Dirk Eddelbuettel and James Joseph Balamuta},
     journal = {The American Statistician},
@@ -507,7 +507,7 @@ year = {1968}
 @article{Brzezinska2018,
 author = {Justyna Brzezi\'{n}ska},
 doi = {doi:10.15611/eada.2018.1.01},
-title = {Item {R}esponse {T}heory {M}odels in the {M}easurement {T}heory with the {U}se of ltm {P}ackage in {R}},
+title = {Item Response Theory Models in the Measurement Theory with the Use of ltm Package in {R}},
 journal = {Econometrics},
 number = {1},
 volume = {22},
@@ -536,7 +536,7 @@ pages = {11--25}
 }
 
 @ARTICLE{An2014,
-  title   = "Item response theory: {W}hat it is and how you can use the {IRT} procedure to apply it",
+  title   = "Item response theory: What it is and how you can use the {IRT} procedure to apply it",
   author  = "An, X and Yung, Y F",
   journal = "SAS Institute Inc",
   volume  =  10,
@@ -577,14 +577,14 @@ pages = {11--25}
   url = {https://figshare.com/articles/dataset/TDRI_dataset_csv/3142321/1},
   author = {Golino,  Hudson},
   keywords = {170110 Psychological Methodology,  Design and Analysis,  FOS: Psychology,  FOS: Psychology},
-  title = {TDRI dataset.csv},
+  title = {{TDRI} dataset},
   publisher = {figshare},
   year = {2016},
   copyright = {Creative Commons Attribution 4.0 International}
 }
 
 @article{team2013r,
-  title={R: {A} language and environment for statistical computing},
+  title={R: A language and environment for statistical computing},
   author={Team, R Core and others},
   year={2013},
   publisher={Vienna, Austria}
@@ -627,7 +627,7 @@ pages = {11--25}
   number = {1},
   pages = {77--90},
   author = {Fritz Drasgow},
-  title = {An {E}valuation of {M}arginal {M}aximum {L}ikelihood {E}stimation for the {T}wo-{P}arameter {L}ogistic {M}odel},
+  title = {An Evaluation of Marginal Maximum Likelihood Estimation for the Two-Parameter Logistic Model},
   journal = {Applied Psychological Measurement}
 }
 
@@ -655,7 +655,7 @@ pages = {11--25}
   number = {4},
   pages = {1126--1133},
   author = {S. Vansteelandt and E. Goetghebeur and T. Verstraeten},
-  title = {Regression {M}odels for {D}isease {P}revalence with {D}iagnostic {T}ests on {P}ools of {S}erum {S}amples},
+  title = {Regression Models for Disease Prevalence with Diagnostic Tests on Pools of Serum Samples},
   journal = {Biometrics}
 }
 
@@ -675,7 +675,7 @@ pages = {11--25}
   volume = {33},
   number = {2},
   author = {Hemant Ishwaran and J. Sunil Rao},
-  title = {Spike and slab variable selection: Frequentist and {B}ayesian strategies},
+  title = {Spike and slab variable selection: Frequentist and {Bayesian} strategies},
   journal = {The Annals of Statistics}
 }
 
@@ -688,7 +688,7 @@ pages = {11--25}
   number = {5},
   pages = {676--696},
   author = {Coen A. Bernaards and Robert I. Jennrich},
-  title = {Gradient {P}rojection {A}lgorithms and {S}oftware for {A}rbitrary {R}otation {C}riteria in {F}actor {A}nalysis},
+  title = {Gradient Projection Algorithms and Software for Arbitrary {R}otation Criteria in Factor Analysis},
   journal = {Educational and Psychological Measurement}
 }
 
@@ -728,7 +728,7 @@ pages = {11--25}
 }
 
 @article{golino2017exploratory,
-  title={Exploratory graph analysis: {A} new approach for estimating the number of dimensions in psychological research},
+  title={Exploratory graph analysis: A new approach for estimating the number of dimensions in psychological research},
   author={Golino, Hudson F and Epskamp, Sacha},
   journal={PloS one},
   volume={12},
@@ -740,7 +740,7 @@ pages = {11--25}
 
 @article{KS_article,
 author = {Massey, F. J. },
-title = {The {K}olmogorov-{S}mirnov {T}est for {G}oodness of {F}it},
+title = {The Kolmogorov-Smirnov Test for Goodness of Fit},
 journal = {Journal of the American Statistical Association},
 volume = {46},
 pages = {68-78},
@@ -761,7 +761,7 @@ eprint = {
 @Inbook{Huber2011,
 author="Huber, Peter J.",
 editor="Lovric, Miodrag",
-title="Robust {S}tatistics",
+title="Robust Statistics",
 bookTitle="International Encyclopedia of Statistical Science",
 year="2011",
 publisher="Springer Berlin Heidelberg",
@@ -822,7 +822,7 @@ url="https://doi.org/10.1007/978-3-642-04898-2_594"
 }
 
 @Article{MIRT,
-title = {{mirt}: {A} {M}ultidimensional {I}tem {R}esponse {T}heory {P}ackage
+title = {{mirt}: A Multidimensional Item Response Theory Package
   for the {R} Environment},
 author = {R. Philip Chalmers},
 journal = {Journal of Statistical Software},
@@ -853,14 +853,14 @@ doi = {10.18637/jss.v048.i06},
 }
 
 @book{gamerman2006markov,
-  title={Markov chain {M}onte {C}arlo: stochastic simulation for Bayesian inference},
+  title={Markov chain Monte Carlo: stochastic simulation for Bayesian inference},
   author={Gamerman, Dani and Lopes, Hedibert F},
   year={2006},
   publisher={CRC Press}
 }
 
 @book{achenbach1991manual,
-  title={Manual for the {C}hild {B}ehavior {C}hecklist/4-18 and 1991 {P}rofile},
+  title={Manual for the Child Behavior Checklist/4-18 and 1991 Profile},
   author={Achenbach, T.M.},
   isbn={9780938565086},
   lccn={90072107},
@@ -870,7 +870,7 @@ doi = {10.18637/jss.v048.i06},
 }
 
 @article{barrett1991diagnosing,
-  title={Diagnosing {C}hildhood {D}epression. {W}ho {S}hould be {I}nterviewed-{P}arent or {C}hild?},
+  title={Diagnosing Childhood Depression. Who Should be Interviewed-Parent or Child?},
   author={Barrett, ML and Berney, TP and Bhate, S and Famuyiwa, OO and Fundudis, T and Kolvin, I and Tyrer, S},
   journal={The British Journal of Psychiatry},
   pages={22--27},
@@ -882,13 +882,13 @@ doi = {10.18637/jss.v048.i06},
   address = {L.A.},
   author = {Achenbach, Thomas M. Rescorla, Leslie.},
   publisher = {Burlington, Vt. : ASEBA},
-  title = {Manual for the {ASEBA} {P}reschool formsand {P}rofiles},
+  title = {Manual for the {ASEBA} Preschool formsand Profiles},
   year = 2002
   }
   
 @ARTICLE{procruste,
     author = {Gower, J. C.},
-    title = {Generalized procrustes analysis},
+    title = {Generalized {Procrustes} analysis},
     journal = {Psychometrik},
     year = {1975},
     volume = {40},
@@ -900,13 +900,13 @@ doi = {10.18637/jss.v048.i06},
 author = {Choi, SHC and Cha, Sung-Hyuk and Tappert, Charles},
 year = {2009},
 pages = {},
-title = {A {S}urvey of {B}inary {S}imilarity and {D}istance {M}easures},
+title = {A Survey of Binary Similarity and Distance Measures},
 volume = {8},
 journal = {J. Syst. Cybern. Inf.}
 }
 
 @article{chib1995understanding,
-  title={Understanding the metropolis-hastings algorithm},
+  title={Understanding the {Metropolis--Hastings} algorithm},
   author={Chib, Siddhartha and Greenberg, Edward},
   journal={{T}he {A}merican {S}tatistician},
   volume={49},
@@ -927,7 +927,7 @@ journal = {J. Syst. Cybern. Inf.}
 }
 
 @article{warnick2008screening,
-  title={Screening efficiency of the {C}hild {B}ehavior {C}hecklist and {S}trengths and {D}ifficulties {Q}uestionnaire: {A} systematic review},
+  title={Screening efficiency of the Child Behavior Checklist and Strengths and Difficulties Questionnaire: A systematic review},
   author={Warnick, Erin M and Bracken, Michael B and Kasl, Stanislav},
   journal={Child and Adolescent Mental Health},
   volume={13},
@@ -937,7 +937,7 @@ journal = {J. Syst. Cybern. Inf.}
 }
 
 @article{powers2020evaluation,
-  title={Evaluation: from precision, recall and {F}-measure to {ROC}, informedness, markedness and correlation},
+  title={Evaluation: from precision, recall and F-measure to {ROC}, informedness, markedness and correlation},
   author={Powers, David MW},
   journal={arXiv preprint arXiv:2010.16061},
   year={2020}
@@ -954,7 +954,7 @@ journal = {J. Syst. Cybern. Inf.}
 }
 
 @article{yerushalmy1947statistical,
-  title={Statistical problems in assessing methods of medical diagnosis, with special reference to {X}-ray techniques},
+  title={Statistical problems in assessing methods of medical diagnosis, with special reference to X-ray techniques},
   author={Yerushalmy, Jacob},
   journal={Public Health Reports (1896-1970)},
   pages={1432--1449},
@@ -1107,7 +1107,7 @@ journal = {J. Syst. Cybern. Inf.}
   
 @article{Zukauskiene_2004,
   author = {Zukauskiene R, et al.},
-  title = {Evaluating behavioral and emotional problems with the {C}hild {Be}havior {C}hecklist and {Y}outh {S}elf-{R}eport scales: cross-informant and longitudinal associations.},
+  title = {Evaluating behavioral and emotional problems with the Child {Be}havior Checklist and Youth Self-{R}eport scales: cross-informant and longitudinal associations.},
   journal = {Medicina (Kaunas).},
   pages = {169-177},
   volume = {40(2)},
@@ -1127,7 +1127,7 @@ journal = {J. Syst. Cybern. Inf.}
 %   author = {Salbach-Andrae, H., Lenz, K., & Lehmkuhl, U.},  
 
 @article{hartman1999syndrome,
-  title={Syndrome dimensions of the {C}hild {B}ehavior {C}hecklist and the {T}eacher {R}eport {F}orm: A critical empirical evaluation},
+  title={Syndrome dimensions of the Child Behavior Checklist and the Teacher {R}eport Form: A critical empirical evaluation},
   author={Hartman, Catharina A and Hox, Joop and Auerbach, Judith and Erol, Nese and Fonseca, Antonio C and Mellenbergh, Gideon J and N{\o}vik, Torunn S and Oosterlaan, Jaap and Roussos, Alexandra C and Shalev, Ruth S and others},
   journal={Journal of {C}hild {P}sychology and {P}sychiatry},
   volume={40},
@@ -1147,7 +1147,7 @@ journal = {J. Syst. Cybern. Inf.}
 }
 
 @article{de1996cross,
-  title={Cross-cultural generalizability of the {Y}outh {S}elf-{R}eport and {T}eacher's {R}eport {F}orm cross-informant syndromes},
+  title={Cross-cultural generalizability of the Youth Self-{R}eport and Teacher's {R}eport Form cross-informant syndromes},
   author={de Groot, Astrid and Koot, Hans M and Verhulst, Frank C},
   journal={{J}ournal of {A}bnormal {C}hild {P}sychology},
   volume={24},
@@ -1169,7 +1169,7 @@ journal = {J. Syst. Cybern. Inf.}
   
 @article{Van-Lieshout-2015,
     author = {Van Lieshout, R. J. and Boyle, M.H. and Schmidt, L. and Saigal, S. and Ferro,  M.A.},
-  title = {Measurement {I}nvariance {A}cross {P}arent and {S}elf-{R}atings of {E}xtremely {L}ow {B}irth {W}eight {S}urvivors and {N}ormal {B}irth {W}eight {C}ontrols in {C}hildhood and {A}dolescence on the {C}hild {B}ehavior {C}hecklist and {Y}outh {S}elf-{R}eport.},
+  title = {Measurement Invariance Across Parent and Self-{R}atings of Extremely Low Birth Weight Survivors and Normal Birth Weight Controls in Childhood and Adolescence on the Child Behavior Checklist and Youth Self-{R}eport.},
   journal = {J Pediatr Psychol.},
   pages = {825-833},
   volume = {40(8)},
@@ -1218,7 +1218,7 @@ journal = {J. Syst. Cybern. Inf.}
 @article{Lambert-2007,
   author = {Lambert, M. C. and Essau, C.A. and Schmitt, N. and Samms-Vaughan, M.E. 
   },
-  title = {Dimensionality and psychometric invariance of the {Y}outh {S}elf-{R}eport {F}orm of the {C}hild {B}ehavior {C}hecklist in cross-national settings.},
+  title = {Dimensionality and psychometric invariance of the Youth Self-{R}eport Form of the Child Behavior Checklist in cross-national settings.},
   journal = {Assessment},
   pages = {231-45},
   volume = {14,3},
@@ -1427,7 +1427,7 @@ year="2016" }
     journal="Journal of Mathematical Sociology" }
 @article{Sr62,
   author="R. N. {Shepard}",
-  title={The analysis of proximities: {M}ultidimensional {S}caling with an unknown distance function},
+  title={The analysis of proximities: Multidimensional Scaling with an unknown distance function},
   year="1962",
   journal="Psychometrika ",
   volume="27",
@@ -1540,7 +1540,7 @@ pages="271-288"
 
 @article{wainer:87,
  author = "Wainer, H. and Kiely, G. L.",
- title = "Item clusters and computerized adaptive testing: {A} case for testlets",
+ title = "Item clusters and computerized adaptive testing: A case for testlets",
  journal = "Journal of Educational Measurement",
  year = 1987,
  volume = "24",
@@ -1714,7 +1714,7 @@ pages="271-288"
 }
 
 @article{Oh:2007,
- title = {Model-based clustering with dissimilarities: A {B}ayesian approach},
+ title = {Model-based clustering with dissimilarities: A {Bayesian} approach},
  journal = {Journal of Computational and Graphical Statistics},
  author = {Oh, M.-S. and Raftery, A.E.},
  volume = {16},
@@ -1777,7 +1777,7 @@ pages="271-288"
 }
 
 @article{Geyer:1992,
- title = {Constrained {M}onte {C}arlo Maximum Likelihood for Dependent Data},
+ title = {Constrained Monte Carlo Maximum Likelihood for Dependent Data},
  journal = {Journal of the Royal Statistical Society, Series B},
  author = {Geyer, C. J. and Thompson, E. A.},
  volume = {54},
@@ -1795,7 +1795,7 @@ pages="271-288"
 }
 
 @misc{Lyne:2015,
- title = {On Russian Roulette Estimates for Bayesian Inference with Doubly-Intractable Likelihoods},
+ title = {On Russian Roulette Estimates for {Bayesian} Inference with Doubly-Intractable Likelihoods},
  author = {Lyne, A. and Girolami, M. and Atchade, Y. and Strathmann, H. and Simpson, D.},
  year = {2015},
  journal = {Statistical Science},
@@ -1804,7 +1804,7 @@ pages="271-288"
 }
 
 @article{Moller:2006,
- title = {An efficient {M}arkov chain {M}onte {C}arlo method for distributions with intractable normalising constants},
+ title = {An efficient Markov chain Monte Carlo method for distributions with intractable normalising constants},
  journal = {Biometrika},
  author = {M\'oller, J. and Pettitt, A. N. and Reeves, R. W. and Berthelsen, K. K. },
  volume = {93},
@@ -2001,7 +2001,7 @@ pages="271-288"
 }
 
 @article{Friel:2016,
- title = {Interlocking directorates in {I}rish companies using a latent space model for bipartite networks},
+ title = {Interlocking directorates in Irish companies using a latent space model for bipartite networks},
  journal = {Proceedings of the National Academy of Sciences of the United States of America},
  author = {Nial Friel and Riccardo Rastelli and Jason Wyse and Adrian E. Raftery},
  volume = {113},
@@ -2169,7 +2169,7 @@ pages="271-288"
 }
 
 @article{Schmidhuber:12,
- title={Deep learning in neural networks: {A}n overview},
+ title={Deep learning in neural networks: An overview},
  author={Schmidhuber, J.},
  volume={61},
  journal={Neural Networks},
@@ -2178,7 +2178,7 @@ pages="271-288"
 }
 
 @article{Duane:87,
- title={Hybrid {M}onte {C}arlo},
+ title={Hybrid Monte Carlo},
  author={Duane, S. and Kennedy, A. D. and Pendleton, B. J. and Roweth, D.},
  volume={195},
  journal={Physics Letters B},
@@ -2203,7 +2203,7 @@ pages="271-288"
 }
 
 @article{Girolami:11,
- title={Riemann manifold {L}angevin and {H}amiltonian {M}onte {C}arlo methods},
+ title={Riemann manifold Langevin and Hamiltonian Monte Carlo methods},
  author={Girolami, M. and Calderhead, B.},
  volume={73},
  journal={Journal of the Royal Statistical Society: Series B},
@@ -2221,7 +2221,7 @@ pages="271-288"
 }
 
 @article{Carpenter:17,
- title={Stan: {A} probabilistic programming language},
+ title={Stan: A probabilistic programming language},
  author={Carpenter, B. and Gelman, A. and Hoffman, M. D. and Lee, D. and Goodrich, B. and Betancourt, M. and Brubaker, M. and Guo, J. and Li, P. and Riddell, A.},
  volume={76},
  journal={Journal of Statistical Software},
@@ -2229,7 +2229,7 @@ pages="271-288"
 }
 
 @article{Liang:07ML,
- title={Annealing Stochastic Approximation {M}onte {C}arlo for Neural Network Training},
+ title={Annealing Stochastic Approximation Monte Carlo for Neural Network Training},
  author={Liang, F.},
  volume={68},
  journal={Machine Learning},
@@ -2239,7 +2239,7 @@ pages="271-288"
 
 @inproceedings{Lan:2014,
  author={Lan, S. and Streets, J. and Shahbaba, B.},
- title={Wormhole {H}amiltonian Monte Carlo},
+ title={Wormhole Hamiltonian Monte Carlo},
  booktitle={Proceedings of Twenty-Eighth AAAI Conference on Artificial Intelligence},
  publisher={AAAI Press},
  address={Palo Alto, CA},
@@ -2257,7 +2257,7 @@ pages="271-288"
 }
 
 @article{Roberts:03,
- title={Langevin diffusions and Metropolis-Hastings algorithms},
+ title={Langevin diffusions and {Metropolis-Hastings} algorithms},
  author={Roberts, G. O. and Stramer, O.},
  volume={4},
  journal={Methodology and Computing in Applied Probability},
@@ -2275,14 +2275,14 @@ pages="271-288"
 }
 
 @article{Durmus:17,
-  title={On the convergence of {H}amiltonian {M}onte {C}arlo},
+  title={On the convergence of Hamiltonian Monte Carlo},
   author={Durmus, A. and Moulines, E. and Saksman, E.},
   journal={arXiv:1705.00166},
   year={2017}
 }
 
 @article{livingstone2016geometric,
-  title={On the geometric ergodicity of {H}amiltonian {M}onte {C}arlo},
+  title={On the geometric ergodicity of Hamiltonian Monte Carlo},
   author={Livingstone, S. and Betancourt, M. and Byrne, S. and Girolami, M.},
   journal={arXiv:1601.08057},
   year={2016}
@@ -2298,7 +2298,7 @@ pages="271-288"
 }
 
 @article{liang2009improving,
-  title={IMPROVING {SAMC} USING SMOOTHING METHODS: THEORY AND APPLICATIONS TO {B}AYESIAN MODEL SELECTION PROBLEMS1},
+  title={IMPROVING {SAMC} USING SMOOTHING METHODS: THEORY AND APPLICATIONS TO BAYESIAN MODEL SELECTION PROBLEMS1},
   author={Liang, F.},
   journal={The Annals of Statistics},
   volume={37},
@@ -2309,7 +2309,7 @@ pages="271-288"
 }
 
 @article{muller1998issues,
-  title={Issues in {B}ayesian analysis of neural network models},
+  title={Issues in Bayesian analysis of neural network models},
   author={M{\"u}ller, P. and Insua, D. R.},
   journal={Neural Computation},
   volume={10},
@@ -2454,7 +2454,7 @@ pages="271-288"
 
 @article{Sweet:13,
  author = {Tracy M. Sweet and Andrew C. Thomas and Brian W. Junker},
- title = {Hierarchical Network Models for Education Research: {H}ierarchical Latent Space Models},
+ title = {Hierarchical Network Models for Education Research: Hierarchical Latent Space Models},
  year = {2013},
  journal = {Journal of Educational and Behavioral Statistics},
  volume = {38},
@@ -2537,7 +2537,7 @@ pages="271-288"
 
 @article{Battiston:17,
  author = {Battiston, F. and Nicosia, V. and Latora, V.},
- title = {The new challenges of multiplex networks: {M}easures and models},
+ title = {The new challenges of multiplex networks: Measures and models},
  year = {2017},
  journal = {The European Physical Journal Special Topics},
  volume = {226},
@@ -2725,7 +2725,7 @@ url = "http://CRAN.R-project.org/package=lme4"}
 
 @article{Min:17,
  author = {Min, K-S. and Jung, H. and Kim, C. M.},
- title = {Examining a causal effect of Gyeonggi innovation schools in Korea},
+ title = {Examining a causal effect of {Gyeonggi} innovation schools in {Korea}},
  journal = {KEDI Journal of Educational Policy},
  volume = {14},
  year = {2017},
