--- a/_articles/RJ-2025-025/RJwrapper.tex
+++ b/_articles/RJ-2025-025/RJwrapper.tex
@@ -56,13 +56,13 @@
 
 %% do not edit, for illustration only
 \sectionhead{Contributed research article}
-\volume{XX}
-\volnumber{YY}
-\year{20ZZ}
-\month{AAAA}
+\volume{17}
+\volnumber{3}
+\year{2025}
+\month{September}
 
 \begin{article}
-  \input{BoundaryStats-ms}
+  \input{RJ-2025-025}
 \end{article}
 
 
