--- a/_articles/RJ-2025-030/RImageReview.bib
+++ b/_articles/RJ-2025-030/RImageReview.bib
@@ -831,7 +831,7 @@
 }
 
 @Misc{AnnaTrigos2022,
-  author    = {Anna Trigos, Yuzhou Feng, Tianpei Yang, Mabel Li, John Zhu, Volkan Ozcoban, Maria Doyle},
+  author    = {Anna Trigos and Yuzhou Feng and Tianpei Yang and Mabel Li and John Zhu and Volkan Ozcoban and Maria Doyle},
   title     = {SPIAT},
   year      = {2022},
   doi       = {10.18129/B9.BIOC.SPIAT},
@@ -1041,7 +1041,7 @@
 
 @Article{KumarDubey2022,
   author    = {Kumar Dubey, Ashutosh and Gupta, Umesh and Jain, Sonal},
-  journal   = {Computers, Materials &amp; Continua},
+  journal   = {Computers, Materials \& Continua},
   title     = {Medical Data Clustering and Classification Using TLBO and Machine Learning Algorithms},
   year      = {2022},
   issn      = {1546-2226},
@@ -1059,7 +1059,6 @@
   year      = {2019},
   issn      = {1992-8645},
   month     = nov,
-  note      = {Publisher Copyright: {\textcopyright} 2005 -ongoing JATIT & LLS.},
   number    = {21},
   pages     = {2973--2981},
   volume    = {97},
@@ -1752,7 +1751,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 }
 
 @Misc{imager,
-  author  = {Simon Barthelme, David Tschumperle, Jan Wijffels, Haz Edine Assemlal, Shota Ochi, Aaron Robotham, Rodrigo Tobar},
+  author  = {Simon Barthelme and David Tschumperle and Jan Wijffels and Haz Edine Assemlal and Shota Ochi and Aaron Robotham and Rodrigo Tobar},
   note    = {R package version 1.0.1},
   title   = {imager: Image Processing Library Based on 'CImg'},
   year    = {2024},
@@ -1798,7 +1797,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 }
 
 @Misc{celltrackR,
-  author  = {Johannes Textor, Katharina Dannenberg, Jeffrey Berry, Gerhard Burger, Annie Liu, Mark Miller, Inge Wortel},
+  author  = {Johannes Textor and  Katharina Dannenberg and Jeffrey Berry and Gerhard Burger and Annie Liu and Mark Miller and Inge Wortel},
   note    = {R package version 1.2.0},
   title   = {celltrackR: Motion Trajectory Analysis},
   year    = {2024},
@@ -1843,7 +1842,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 
 @Article{Bezdek1984,
   author    = {Bezdek, James C. and Ehrlich, Robert and Full, William},
-  journal   = {Computers &amp; Geosciences},
+  journal   = {Computers \& Geosciences},
   title     = {FCM: The fuzzy c-means clustering algorithm},
   year      = {1984},
   issn      = {0098-3004},
@@ -1910,7 +1909,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 }
 
 @Misc{imagefluency,
-  author    = {Stefan Mayer,},
+  author    = {Stefan Mayer},
   title     = {stm/imagefluency: imagefluency 0.2.5},
   year      = {2024},
   copyright = {Creative Commons Attribution 4.0 International},
@@ -1967,7 +1966,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 
 @Article{Moos2012,
   author    = {von Moos, Nadia and Burkhardt-Holm, Patricia and Köhler, Angela},
-  journal   = {Environmental Science &amp; Technology},
+  journal   = {Environmental Science \& Technology},
   title     = {Uptake and Effects of Microplastics on Cells and Tissue of the Blue Mussel Mytilus edulis L. after an Experimental Exposure},
   year      = {2012},
   issn      = {1520-5851},
@@ -2008,7 +2007,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 
 @Article{Cao2023,
   author    = {Cao, Jingwen and Xu, Ran and Wang, Fuhan and Geng, Yuan and Xu, Tianchao and Zhu, Mengran and Lv, Hongli and Xu, Shiwen and Guo, Meng-yao},
-  journal   = {Fish &amp; Shellfish Immunology},
+  journal   = {Fish \& Shellfish Immunology},
   title     = {Polyethylene microplastics trigger cell apoptosis and inflammation via inducing oxidative stress and activation of the NLRP3 inflammasome in carp gills},
   year      = {2023},
   issn      = {1050-4648},
