--- a/_articles/RJ-2025-028/RJ-2025-028.Rmd
+++ b/_articles/RJ-2025-028/RJ-2025-028.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Rendering LaTeX in R
-date: '2025-10-21'
+date: '2025-10-22'
 abstract: |
   The xdvir package provides functions for rendering  LaTeX fragments as labels, annotations, and data symbols in R plots.  There are convenient high-level functions for rendering LaTeX fragments, including labels on ggplot2 plots, plus lower-level functions for more fine control over the separate authoring, typesetting, and rendering steps. There is support for making use of LaTeX packages, including TikZ graphics.  The rendered LaTeX output is fully integrated with R graphics output in the sense that LaTeX output  can be positioned and sized relative to R graphics output and vice versa.
 draft: no
@@ -17,6 +17,7 @@ type: package
 output:
   rjtools::rjournal_pdf_article:
     toc: no
+    keep_tex: yes
   rjtools::rjournal_web_article:
     self_contained: yes
     toc: no
